--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #ece9e2;
   --foreground: #171717;
 }
 
@@ -10,17 +10,25 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --gray-txt: #8c8c8c;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .wrapper {
+    @apply grid grid-cols-[16px_1fr_16px] col-span-2;
+  }
+
+  .wrapper > * {
+    grid-column: 2;
+  }
+
+  .wrapper > .fullbleed {
+    grid-column: 1 / -1;
+  }
 }
